# graphics-25-26-RahillMavani

Coursework/Rasteriser/: CMakeLists.txt  LinAlg.hpp  rasteriser.cpp
Labs/week1/: Task1.cpp  Task2.cpp
Labs/week2/: Task1.cpp  Vector3.hpp
Labs/week3/: Task1.cpp  Vector2.hpp  Vector3.hpp
Labs/week4/: Task1.cpp
Labs/week5/: Light.hpp  Task1.cpp
Labs/week6/: Task1.cpp
Labs/week8/: Shading.hpp  Task1.cpp  Task2.cpp
Labs/week9/: SphereTracer.cpp
